# innowise_laboratory

lecture_1/: main.py
lecture_2/: main.py
lecture_3/: main.py  requirements.txt
lecture_4/: .gitignore  main.py  pyproject.toml  queries.sql  school.db  verify.py
